force-app/main/default/objects/Pitch__c/Pitch__c.object-meta.xml
<CustomObject>
    <label>Pitch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pitches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>