force-app/main/default/objects/Pitch__c/fields/event_link_update_date__c.field-meta.xml
<CustomField>
    <fullName>event_link_update_date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update date</label>
    <type>DateTime</type>
</CustomField>