force-app/main/default/objects/Pitch__c/fields/gf_creation_date__c.field-meta.xml
<CustomField>
    <fullName>gf_creation_date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation date</label>
    <type>DateTime</type>
</CustomField>