force-app/main/default/objects/Pitch__c/fields/gf_recent_pitch_type__c.field-meta.xml
<CustomField>
    <fullName>gf_recent_pitch_type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecentlyCreated</label>
    <type>Checkbox</type>
</CustomField>