force-app/main/default/objects/Pitch__c/fields/origin_desc__c.field-meta.xml
<CustomField>
    <fullName>origin_desc__c</fullName>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>