force-app/main/default/objects/Pitch__c/fields/participant_id__c.field-meta.xml
<CustomField>
    <fullName>participant_id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relaciona el registro de Pitch con el cliente</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pitches</relationshipLabel>
    <relationshipName>Pitches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>