force-app/main/default/objects/Pitch__c/fields/pitch_desc__c.field-meta.xml
<CustomField>
    <fullName>pitch_desc__c</fullName>
    <description>Descripción del Pitch</description>
    <label>Description</label>
    <length>256</length>
    <type>Html</type>
</CustomField>