force-app/main/default/objects/Pitch__c/fields/solution_category_name__c.field-meta.xml
<CustomField>
    <fullName>solution_category_name__c</fullName>
    <description>Guarda la familia del producto con el que está relacionado el pitch</description>
    <label>Family Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GTB</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>