force-app/main/default/objects/Pitch__c/fields/solution_name_path_desc__c.field-meta.xml
<CustomField>
    <fullName>solution_name_path_desc__c</fullName>
    <description>Guarda el producto con el que está relacionado el pitch</description>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>solution_category_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Client Resources</fullName>
            </value>
            <value>
                <fullName>Corporate Loans</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debt Capital Markets</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Equity Capital Markets</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Leverage Buyout (LBOs)</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>Project Finance - Advisory</fullName>
            </value>
            <value>
                <fullName>Project Finance - Lending</fullName>
            </value>
            <value>
                <fullName>Rates</fullName>
            </value>
            <value>
                <fullName>Securities Services</fullName>
            </value>
            <value>
                <fullName>Structured Trade Finance</fullName>
            </value>
            <value>
                <fullName>Transaction Trade Finance</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>