force-app/main/default/objects/Pitch__c/listViews/My_pitches.listView-meta.xml
<ListView>
    <fullName>My_pitches</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My pitches</label>
</ListView>